<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.man_shoping.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/ll2"
        android:layout_alignParentBottom="true"
        >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/group"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <RadioButton
                android:checked="true"
                style="@style/App"
                android:drawableTop="@drawable/footer_home_ico"
                android:text="@string/app_home"
                android:id="@+id/shou"
                android:textColor="@drawable/footer_textcolor"
                />
            <RadioButton
                style="@style/App"
                android:drawableTop="@drawable/footer_class"
                android:text="@string/app_class"
                android:id="@+id/dong"
                android:textColor="@drawable/footer_textcolor"
                />
            <RadioButton
                style="@style/App"
                android:drawableTop="@drawable/carts"
                android:text="@string/app_cart"
                android:textColor="@drawable/footer_textcolor"
                android:id="@+id/cat"
                />
            <RadioButton
                style="@style/App"
                android:drawableTop="@drawable/uers"
                android:textColor="@drawable/footer_textcolor"
                android:text="@string/app_uer"
                android:id="@+id/my"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_above="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ll"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
