<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_tianzhuan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.man_shoping.Intent_tiaozhuan.Log_tianzhuan">
    <ImageView
        android:scaleType="center"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/img_my"
        android:src="@mipmap/uik_nav_home_selected"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/log2"
        android:layout_below="@+id/img_my"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_username"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_name"
            android:hint="@string/app_names"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/log2"
        android:id="@+id/log3"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/app_pass"
            android:id="@+id/log_pass"
            />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log3"
        android:text="@string/app_but"
        android:id="@+id/but"
        android:background="@color/colorPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_zhu"
        android:layout_marginLeft="400dp"
        android:id="@+id/zhuche"
        android:layout_below="@+id/but"
        android:textColor="@color/colorPrimary"
        />
</RelativeLayout>
