<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.man_shoping.Intent_tiaozhuan.MyMessage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_xin"
        android:background="@color/colorAccent"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_back"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_my_xin"
            android:textSize="24dp"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_xin1"
        android:layout_below="@+id/layout_xin"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/taobao"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_default_user_head"
            android:id="@+id/touxiang"
            android:layout_marginLeft="320dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_normal_dot_left"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_xin2"
        android:layout_below="@+id/layout_xin1"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taobao_name"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="还未登录"
            android:layout_marginLeft="270dp"
            android:id="@+id/tao_name"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_normal_dot_left"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_xin3"
        android:layout_below="@+id/layout_xin2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taobao_nichen"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="阳阳亲"
            android:id="@+id/nichen"
            android:layout_marginLeft="320dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_normal_dot_left"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_xin4"
        android:layout_below="@+id/layout_xin3"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taobao_sex"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="男"
            android:id="@+id/sex"
            android:layout_marginLeft="320dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_normal_dot_left"
            android:layout_gravity="center"
            />
    </LinearLayout>
</RelativeLayout>
